--- a/Proyek3/persemeter/style.css
+++ b/Proyek3/persemeter/style.css
@@ -70,3 +70,14 @@ button {
 button:hover {
     opacity: 0.8;
 }
+#judul{
+    margin:60px;
+    padding-left: 10px;
+    text-align: center;
+    width: 90%;
+    background-color: lightblue;
+    border: 3px solid #dbb13b;
+    border-radius: 10px;
+    display: inline-table;
+    float: left;
+}
