--- a/PROJECT/app/views/index/show.phtml
+++ b/PROJECT/app/views/index/show.phtml
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>HomePage</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" media="screen" href="style.css" />
+    <link rel="stylesheet" type="text/css" media="screen" href="css/style.css" />
     <script src="main.js"></script>
 </head>
 <body>
@@ -13,7 +13,7 @@
 		<div id="atas">
 			<div id="atasleft">
 			<a href="#">
-			<img src="download.png" alt="Youtube" style="width: 200px;height: 60px;"></a>
+			<img src="img/download.png" alt="Youtube" style="width: 200px;height: 60px;"></a>
 		</div>
 
 
@@ -36,12 +36,12 @@
         <p>Mahasiswa identik dengan buku yang selalu menemaninya setiap hari</p>
     </div>
     <div id="isikiri">
-        <img src="ambiz-introduction.jpg" style="width: 100%;">
+        <img src="img/ambiz-introduction.jpg" style="width: 100%;">
     </div>
 </div>
 <div id="isi2">
     <div id="isikanan2">
-        <img src="isi2.jpg" style="width: 100%;">
+        <img src="img/isi2.jpg" style="width: 100%;">
     </div>
     <div id="isikiri2">
         <h2>BUKU?</h2>
@@ -52,42 +52,42 @@
 <div id="kategori">
     <h1>KATEGORI BUKU</h1>
     <div id="kolom">
-        <img src="isi2.jpg" style="width: 100%;">
+        <img src="img/isi2.jpg" style="width: 100%;">
         <button>Semester 1</button>
     </div>
     <div id="kolom">
-        <img src="isi2.jpg" style="width: 100%;">
+        <img src="img/isi2.jpg" style="width: 100%;">
         <button>Semester 2</button>
     </div>
     <div id="kolom">
-        <img src="isi2.jpg" style="width: 100%;">
+        <img src="img/isi2.jpg" style="width: 100%;">
         <button>Semester 3</button>
     </div>
     <div id="kolom">
-        <img src="isi2.jpg" style="width: 100%;">
+        <img src="img/isi2.jpg" style="width: 100%;">
         <button>Semester 4</button>
     </div>
     <div id="kolom">
-        <img src="isi2.jpg" style="width: 100%;">
+        <img src="img/isi2.jpg" style="width: 100%;">
         <button>Semester 5</button>
     </div>
     <div id="kolom">
-        <img src="isi2.jpg" style="width: 100%;">
+        <img src="img/isi2.jpg" style="width: 100%;">
         <button>Semester 6</button>
     </div>
 </div>
 <div id="bagaimana">
     <h1>BAGAIMANA ?</h1>
     <div id="kolombagaimana">
-        <img src="isi2.jpg" style="width: 100%;">
+        <img src="img/isi2.jpg" style="width: 100%;">
         <button>Reservasi</button>
     </div>
     <div id="kolombagaimana">
-        <img src="isi2.jpg" style="width: 100%;">
+        <img src="img/isi2.jpg" style="width: 100%;">
         <button>Peminjaman</button>
     </div>
     <div id="kolombagaimana">
-        <img src="isi2.jpg" style="width: 100%;">
+        <img src="img/isi2.jpg" style="width: 100%;">
         <button>Penyumbangan</button>
     </div>
 </div>
@@ -96,9 +96,9 @@
     </div>
     <div id="kolomfooter">
         <h1>Our Media Social</h1>
-        <a href="#"><img src="icon-facebook.png" style="width: 5%;"></a>
-        <a href="#"><img src="icon-mail.png" style="width: 5%;"></a>
-        <a href="#"><img src="icon-twitter.png" style="width: 5%;"></a>
+        <a href="#"><img src="img/icon-facebook.png" style="width: 5%;"></a>
+        <a href="#"><img src="img/icon-mail.png" style="width: 5%;"></a>
+        <a href="#"><img src="img/icon-twitter.png" style="width: 5%;"></a>
         <br><br>
         <h3>Kategori Buku</h3>
         <h3>Bagaimana?</h3><br>
