--- a/PROJECT/app/views/index/show.phtml
+++ b/PROJECT/app/views/index/show.phtml
@@ -15,7 +15,7 @@
     <!-- external page css -->
     <link rel="stylesheet" type="text/css" media="screen" href="css/show.css" />
 </head>
-<body>
+<body style="background-image: url('img/svg/bg_layer1.svg')">
     <div class="topnav" id="top-nav">
         <a class="home" href="<?=$this->url->getBaseUri()?>">
             <img src="img/svg/logo.svg" alt="booKesma">
@@ -29,27 +29,32 @@
             <img src="img/svg/hamburger-menu.svg" alt="menu">
         </a>
     </div>
-<!-- <div id="header">
-<div id="isi">
-    <div id="isikanan">
-        <h2>BUKU?</h2>
-        <p>Buku adalah jendela dunia, sebagai generasi muda haruslah kita mencintai buku</p>
-        <p>Mahasiswa identik dengan buku yang selalu menemaninya setiap hari</p>
+    <br><br><br><br>
+<div class="container" style="background-color: lightblue; padding: 30px; border-radius:10%;">
+  <div class="row">
+    <div class="col-sm-7" style="font-family:mp; font-size: 20px;">
+        <h2 style="font-size: 40px; background-color: #FAE3E9; padding: 3%; border-radius:5%;"><b>BUKU?</b></h2>
+        <p style="padding:3%; text-alig;n:justify">Buku yang kubaca selalu memberi sayap-sayap baru.
+Membawaku terbang ke taman-taman pengetahuan paling menawan, melintasi waktu dan peristiwa, berbagi cerita cinta, menyapa semua tokoh yang ingin kujumpai, sambil bermain di lengkung pelangi.</p>
     </div>
-    <div id="isikiri">
+    <div class="col-sm-5">
         <img src="img/jpgpng/ambiz-introduction.jpg" style="width: 100%;">
     </div>
+  </div>
 </div>
-<div id="isi2">
-    <div id="isikanan2">
+<br><br>
+<div class="container" style="background-color: lightgreen;padding: 30px; border-radius:10%;">
+  <div class="row">
+    <div class="col-sm-5">
         <img src="img/jpgpng/isi2.jpg" style="width: 100%;">
     </div>
-    <div id="isikiri2">
-        <h2>BUKU?</h2>
-        <p>Buku adalah jendela dunia, sebagai generasi muda haruslah kita mencintai buku</p>
-        <p>Mahasiswa identik dengan buku yang selalu menemaninya setiap hari</p>
+    <div class="col-sm-7" style="font-family:mp; font-size: 20px;">
+    <h2 style="font-size: 40px; background-color: #FAE3E9; padding: 3%; border-radius:5%;">MENGAPA BOOKESMA?</h2>
+        <p style="padding:3%; text-alig;n:justify">Buku adalah jendela dunia, sebagai generasi muda haruslah kita mencintai buku</p>
     </div>
+  </div>
 </div>
+<div id="header">
 <div id="kategori">
     <h1>KATEGORI BUKU</h1>
     <div id="kolom">
@@ -106,7 +111,7 @@
     </div>
     <div id="kolomfooter">
     </div>
-</div> -->
+</div>
 <!-- adding bootstrap -->
 <script src="js/bootstrap.js"></script>
 <!-- adding jquery -->
