--- a/PROJECT/app/views/index/show.phtml
+++ b/PROJECT/app/views/index/show.phtml
@@ -20,7 +20,7 @@
     <link rel="stylesheet" type="text/css" media="screen" href="css/show.css" />
 </head>
 <body style="background-image: url('img/svg/bg_layer1.svg')">
-    <div class="topnav" id="top-nav">
+    <div class="topnav" id="top-nav" style="z-index: 99;">
         <a class="home" href="<?=$this->url->getBaseUri()?>">
             <img src="img/svg/logo.svg" alt="booKesma">
         </a>
@@ -34,10 +34,10 @@
         </a>
     </div>
     <br><br><br><br>
-<div class="container" style="background-color: lightblue; padding: 30px; border-radius:10%;">
+<div class="container" style="background-color: #BFDAD5; padding: 30px; border-radius:10%;">
   <div class="row">
     <div class="col-sm-7" style="font-family:mp; font-size: 20px;">
-        <h2 style="font-size: 40px; background-color: #FAE3E9; padding: 3%; border-radius:5%;"><b>BUKU?</b></h2>
+        <h2 style="font-size: 40px; background-color: lightblue; padding: 3%; border-radius:5%;"><b>BUKU?</b></h2>
         <p style="padding:3%; text-alig;n:justify">Buku yang kubaca selalu memberi sayap-sayap baru.
 Membawaku terbang ke taman-taman pengetahuan paling menawan, melintasi waktu dan peristiwa, berbagi cerita cinta, menyapa semua tokoh yang ingin kujumpai, sambil bermain di lengkung pelangi.</p>
     </div>
@@ -47,74 +47,113 @@ Membawaku terbang ke taman-taman pengetahuan paling menawan, melintasi waktu dan
   </div>
 </div>
 <br><br>
-<div class="container" style="background-color: lightgreen;padding: 30px; border-radius:10%;">
+<div class="container" style="background-color: #F3E8C8;padding: 30px; border-radius:10%;">
   <div class="row">
     <div class="col-sm-5">
         <img src="img/jpgpng/isi2.jpg" style="width: 100%;">
     </div>
     <div class="col-sm-7" style="font-family:mp; font-size: 20px;">
-    <h2 style="font-size: 40px; background-color: #FAE3E9; padding: 3%; border-radius:5%;">MENGAPA BOOKESMA?</h2>
-        <p style="padding:3%; text-alig;n:justify">Buku adalah jendela dunia, sebagai generasi muda haruslah kita mencintai buku</p>
+    <h2 style="font-size: 40px; background-color:#FAE3E9; padding: 3%; border-radius:5%;"><b>MENGAPA BOOKESMA?</b></h2>
+        <p style="padding:3%; text-alig;n:justify">booKesma menyediakan peminjaman dan penyumbangan buku bagi Mahasiswa Informatika ITS pada semua semester. Peminjaman dilakukan dengan sangat mudah begitupun dengan Penyumbangannya</p>
     </div>
   </div>
 </div>
-<div id="header">
-<div id="kategori">
-    <h1>KATEGORI BUKU</h1>
-    <div id="kolom">
-        <img src="img/jpgpng/isi2.jpg" style="width: 100%;">
-        <button>Semester 1</button>
-    </div>
-    <div id="kolom">
-        <img src="img/jpgpng/isi2.jpg" style="width: 100%;">
-        <button>Semester 2</button>
-    </div>
-    <div id="kolom">
-        <img src="img/jpgpng/isi2.jpg" style="width: 100%;">
-        <button>Semester 3</button>
-    </div>
-    <div id="kolom">
-        <img src="img/jpgpng/isi2.jpg" style="width: 100%;">
-        <button>Semester 4</button>
-    </div>
-    <div id="kolom">
-        <img src="img/jpgpng/isi2.jpg" style="width: 100%;">
-        <button>Semester 5</button>
-    </div>
-    <div id="kolom">
-        <img src="img/jpgpng/isi2.jpg" style="width: 100%;">
-        <button>Semester 6</button>
-    </div>
+<br><br>
+<div class="container-fluid" style="background-color: #FBD4C5; padding:1%; border-radius:15% 15% 0% 0%;">
+    <h2 style="font-family: mp; font-size:40px; text-align:center;"><b>-KATEGORI BUKU-</b></h2>
 </div>
-<div id="bagaimana">
-    <h1>BAGAIMANA ?</h1>
-    <div id="kolombagaimana">
-        <img src="img/jpgpng/isi2.jpg" style="width: 100%;">
-        <button>Reservasi</button>
-    </div>
-    <div id="kolombagaimana">
-        <img src="img/jpgpng/isi2.jpg" style="width: 100%;">
-        <button>Peminjaman</button>
-    </div>
-    <div id="kolombagaimana">
-        <img src="img/jpgpng/isi2.jpg" style="width: 100%;">
-        <button>Penyumbangan</button>
-    </div>
-</div>
-<div id="footer">
-    <div id="kolomfooter">
-    </div>
-    <div id="kolomfooter">
-        <h1>Our Media Social</h1>
-        <a href="#"><img src="img/jpgpng/icon-facebook.png" style="width: 5%;"></a>
-        <a href="#"><img src="img/jpgpng/icon-mail.png" style="width: 5%;"></a>
-        <a href="#"><img src="img/jpgpng/icon-twitter.png" style="width: 5%;"></a>
+<div class="container-fluid" style="background-color: #F3E8C8;padding: 5%;">
+  <div class="row">
+    <div class="col-sm-4">
+        <img src="img/svg/semester1.svg" style="width: 100%;">
         <br><br>
-        <h3>Kategori Buku</h3>
-        <h3>Bagaimana?</h3><br>
+        <button style="margin-left:35%;" type="button" class="btn btn-primary btn-lg">Semester 1</button>
     </div>
-    <div id="kolomfooter">
+    <div class="col-sm-4" style="">
+    <img src="img/svg/semester2.svg" style="width: 100%;">
+    <br><br>
+        <button style="margin-left:35%;" type="button" class="btn btn-primary btn-lg">Semester 2</button>
     </div>
+    <div class="col-sm-4">
+        <img src="img/svg/semester3.svg" style="width: 100%;">
+        <br><br>
+        <button style="margin-left:35%;" type="button" class="btn btn-primary btn-lg">Semester 3</button>
+    </div>
+  </div>
+</div>
+<div class="container-fluid" style="background-color: #F3E8C8;padding: 5%;">
+  <div class="row">
+    <div class="col-sm-4">
+        <img src="img/svg/semester4.svg" style="width: 100%;">
+        <br><br>
+        <button style="margin-left:35%;" type="button" class="btn btn-primary btn-lg">Semester 4</button>
+    </div>
+    <div class="col-sm-4" style="">
+    <img src="img/svg/semester5.svg" style="width: 100%;">
+    <br><br>
+        <button style="margin-left:35%;" type="button" class="btn btn-primary btn-lg">Semester 5</button>
+    </div>
+    <div class="col-sm-4">
+        <img src="img/svg/semester6.svg" style="width: 100%;">
+        <br><br>
+        <button style="margin-left:35%;" type="button" class="btn btn-primary btn-lg">Semester 6</button>
+    </div>
+  </div>
+ <div class="container-fluid" style="background-color: #F3E8C8;padding: 5%; padding-left:15%;border-radius:0% 0% 15% 15%;">
+  <div class="row">
+    <div class="col-sm-6">
+        <img src="img/svg/semester7.svg" style="width: 75%;">
+        <br><br>
+        <button style="margin-left:25%;" type="button" class="btn btn-primary btn-lg">Semester 7</button>
+    </div>
+    <div class="col-sm-6" style="">
+    <img src="img/svg/semester8.svg" style="width: 75%;">
+    <br><br>
+        <button style="margin-left:25%;" type="button" class="btn btn-primary btn-lg">Semester 8</button>
+    </div>
+  </div>
+</div>
+</div>
+<br><br>
+<div class="container-fluid" style="background-color: #FBD4C5; padding:1%; border-radius:15% 15% 0% 0%;">
+    <h2 style="font-family: mp; font-size:40px; text-align:center;"><b>-BAGAIMANA-</b></h2>
+</div>
+ <div class="container-fluid" style="background-color: #F3E8C8;padding: 5%; padding-left:15%;">
+  <div class="row">
+    <div class="col-sm-4">
+        <img src="img/svg/how_reservasi.svg" style="width: 75%; height:300px;">
+        <br><br>
+        <button style="margin-left:25%;" type="button" class="btn btn-primary btn-lg">Reservasi</button>
+    </div>
+    <div class="col-sm-4" style="">
+    <img src="img/svg/how_sumbang.svg" style="width: 75%; height:300px;">
+    <br><br>
+        <button style="margin-left:15%;" type="button" class="btn btn-primary btn-lg">Penyumbangan</button>
+    </div>
+    <div class="col-sm-4" style="">
+    <img src="img/svg/how_kembali.svg" style="width: 75%; height:300px;">
+    <br><br>
+        <button style="margin-left:15%;" type="button" class="btn btn-primary btn-lg">Pengembalian</button>
+    </div>
+  </div>
+</div>
+<br><br><br>
+ <div class="container" style="background-color:#BFDAD5;padding: 5%; padding-left:15%; border-radius:10%;">
+  <div class="row">
+    <div class="col-sm-2">
+    </div>
+    <div class="col-sm-8" style="padding-right:10%; text-align: center;">
+    <h1 style="font-family: mp; font-size:30px;"><b>-OUR MEDIA SOCIAL-</b></h1>
+    <img src="img/jpgpng/icon-facebook.png" style="width: 5%;">
+    <img src="img/jpgpng/icon-mail.png" style="width: 5%;">
+    <img src="img/jpgpng/icon-twitter.png" style="width: 5%;">
+    <br>
+    <h3>Kategori Buku</h3>
+    <h3>Bagaimana?</h3>
+    </div>
+    <div class="col-sm-2" style="">
+    </div>
+  </div>
 </div>
 <!-- adding bootstrap -->
 <script src="js/bootstrap.js"></script>
