--- a/app/views/submit/creater.phtml
+++ b/app/views/submit/creater.phtml
@@ -3,7 +3,6 @@
     use Phalcon\Mvc\Url;
     $url = new Url();
 ?>
-<?php include('server.php') ?>
 <!DOCTYPE html>
 <html>
 <head>
@@ -18,38 +17,54 @@
     <!-- adding bootstrap theme css-->
     <link rel="stylesheet" type="text/css" media="screen" href="css/bootstrap-theme.css" />
     <!-- external page css -->
-    <link rel="stylesheet" type="text/css" href="css/style.css">
+    <link rel="stylesheet" type="text/css" href="css/show.css">
 </head>
 <body>
-  <div class="header">
-  	<h2>Register</h2>
-  </div>
-	
-  <form method="post" action="register.php">
-  	<?php include('errors.php'); ?>
-  	<div class="input-group">
-  	  <label>Username</label>
-  	  <input type="text" name="username" value="<?php echo $username; ?>">
-  	</div>
-  	<div class="input-group">
-  	  <label>Email</label>
-  	  <input type="email" name="email" value="<?php echo $email; ?>">
-  	</div>
-  	<div class="input-group">
-  	  <label>Password</label>
-  	  <input type="password" name="password_1">
-  	</div>
-  	<div class="input-group">
-  	  <label>Confirm password</label>
-  	  <input type="password" name="password_2">
-  	</div>
-  	<div class="input-group">
-  	  <button type="submit" class="btn" name="reg_user">Register</button>
-  	</div>
-  	<p>
-  		Already a member? <a href="login.php">Sign in</a>
-  	</p>
-  </form>
+	<div class="topnav" id="top-nav" style="z-index: 99;">
+        <a class="home" href="<?=$this->url->getBaseUri()?>">
+            <img src="img/svg/logo.svg" alt="booKesma">
+        </a>
+        <a href="<?=$this->url->getBaseUri().'login'?>">Masuk</a>
+        <a href="<?=$this->url->getBaseUri().'register'?>">Daftar</a>
+        <a href="<?=$this->url->getBaseuri().'koleksi'?>">Koleksi</a>
+        <a href="<?=$this->url->getBaseuri().'bagaimana'?>">Bagaimana</a>
+        <a href="<?=$this->url->getBaseuri().'sumbang'?>">Sumbang</a>
+        <a href="javascript:void(0);" class="icon" onclick="navbar()">
+            <img src="img/svg/hamburger-menu.svg" alt="menu">
+        </a>
+    </div>
+	<br><br>
+	<div class="header">
+		<h2>Register</h2>
+	</div>
+	<div class="container">
+		<?php echo $this->tag->form("register");?>
+		<div>
+			<label>Username</label>
+			<?php echo $form->render('rname'); ?>
+		</div>
+		<div>
+			<label>NRP</label>
+			<?php echo $form->render('rnrp'); ?>
+		</div>
+		<div>
+			<label>Email</label>
+			<?php echo $form->render('remail'); ?>
+		</div>
+		<div>
+			<label>Password</label>
+			<?php echo $form->render('rpassword'); ?>
+		</div>
+		<div>
+			<label>Confirm Password</label>
+			<?php echo $form->render('rcpassword'); ?>
+		</div>
+		<div>
+		<p>
+			Sudah menjadi anggota? <a href="<?=$this->url->getBaseUri().'login'?>">Masuk</a>
+		</p>
+		</form>
+	</div>
 <!-- adding bootstrap -->
 <script src="js/bootstrap.js"></script>
 <!-- adding jquery -->
