update css how dan cat

--- a/app/views/loggedout/how.phtml
+++ b/app/views/loggedout/how.phtml
@@ -32,63 +32,127 @@
         <a href="javascript:void(0);" class="icon" onclick="navbar()">
             <img src="img/svg/hamburger-menu.svg" alt="menu">
         </a>
+	</div>
+	<br><br><br><br>
+<div class="container" style="background-color: #FAE3E9;">
+  <!-- Trigger the modal with a button -->
+  <div style="width:100%; display:inline-table; float:left;">
+	<div style="width:70%; display: inline-table; float:left;">
+		<button  style="background: url('https://www.bookabuku.com/file/frontend/images/how-thumbnail-subscribe.jpg') no-repeat; width:100%; height:450px;; background-position: center; background-size: cover; font-size: 30px; " class="btn btn-info btn-lg" data-toggle="modal" data-target="#myModal" color="black">RESERVASI
+		</button>
+	</div>
+	<div style="width:30%; float:left;padding: 3%;">
+	<h3>Mari pelajari cara berlangganan paket dan melakukan pembayaran di platform kami.
+		Untuk berlangganan, Anda harus mempunyai akun dan login terlebih dahulu. Daftar sekarang!</h3>
+	</div>
+  </div>
+	
+  <!-- Modal -->
+  <div class="modal fade" id="myModal" role="dialog">
+    <div class="modal-dialog" style="border-radius:5%;">
+      <!-- Modal content-->
+      <div class="modal-content">
+        <div class="modal-header" style="background-color: lightblue;">
+		  <button type="button" class="close" data-dismiss="modal" color="red">&times;</button>
+		  <img src="img/svg/logo.svg" width="20%;" alt="booKesma">
+		  <hr>
+          <h1 class="modal-title" style="font-family:mp ;padding: 1%; text-align:center;">RESERVASI</h1>
+        </div>
+        <div class="modal-body" style="font-family:as; font-size:20px; padding: 5%;">
+          <p>Untuk Reservasi kalian bisa mengisi form untuk login terlebih dahulu. Setelah itu, kalian bisa memilih buku sesuai keinginan. Jika terdapat masalah dalam hal pengisian data. Harap hubungi KESMA HMTC.</p>
+        </div>
+        <div class="modal-footer" style="background-color: lightblue;">
+          <button type="button" style="color:white;" class="btn btn-danger" data-dismiss="modal">Close</button>
+        </div>
+      </div> 
     </div>
-<div id="isi">
-	<div id="judul">
-		<h1>BAGAIMANA?</h1>
-	</div>
+  </div>
 </div>
-<div id="reservasi">
-	<div id="gambar">
-		<img src="img/jpgpng/reservasiicon.png">
+<br><br>
+<div class="container" style="background-color: #BFDAD5;">
+  <!-- Trigger the modal with a button -->
+  <div style="width:100%; display:inline-table; float:left;">
+	<div style="width:30%; float:left; padding:3%;">
+	<h3>Mari pelajari cara pinjam buku pilihan Anda sebagai borrower. Untuk pinjam buku, Anda dibutuhkan untuk sudah berlangganan salah satu paket kami.</h3>
 	</div>
-	<div id="isi">
-		<div id="judul">
-			<h1>RESERVASI</h1>
-		</div>
-		<div id="tulisan">
-			Untuk Reservasi kalian bisa mengisi form untuk login terlebih dahulu. Setelah itu, kalian bisa memilih buku sesuai keinginan. Jika terdapat masalah dalam hal pengisian data. Harap hubungi KESMA HMTC.
-		</div>
+	<div style="width:70%; display: inline-table; float:left;">
+		<button  style="background: url('https://www.bookabuku.com/file/frontend/images/how-thumbnail-borrow.jpg') no-repeat; width:100%; height:450px; background-position: center; background-size: cover; font-size: 30px; " class="btn btn-info btn-lg" data-toggle="modal" data-target="#myModal2" color="black">PEMINJAMAN
+		</button>
 	</div>
+  </div>
+	
+  <!-- Modal -->
+  <div class="modal fade" id="myModal2" role="dialog">
+    <div class="modal-dialog" style="border-radius:5%;">
+      <!-- Modal content-->
+      <div class="modal-content">
+        <div class="modal-header" style="background-color: lightblue;">
+		  <button type="button" class="close" data-dismiss="modal" color="red">&times;</button>
+		  <img src="img/svg/logo.svg" width="20%;" alt="booKesma">
+		  <hr>
+          <h1 class="modal-title" style="font-family:mp ;padding: 1%; text-align:center;">PEMINJAMAN</h1>
+        </div>
+        <div class="modal-body" style="font-family:as; font-size:20px; padding: 5%;">
+          <p>Untuk Peminjaman kalian bisa mengisi form untuk login terlebih dahulu. Setelah itu, kalian bisa memilih buku sesuai keinginan. Silahkan ambil buku sesuai jadwal janjian dengan pengurus KESMA. Jika terdapat masalah dalam hal pengisian data. Harap hubungi KESMA HMTC.</p>
+        </div>
+        <div class="modal-footer" style="background-color: lightblue;">
+          <button type="button" style="color:white;" class="btn btn-danger" data-dismiss="modal">Close</button>
+        </div>
+      </div> 
+    </div>
+  </div>
 </div>
-<div id="reservasi1">
-	<div id="isi">
-		<div id="judul">
-			<h1>PENYUMBANGAN</h1>
-		</div>
-		<div id="tulisan">
-			Untuk Penyumbangan kalian bisa login terlebih dahulu. Setelah itu, kalian bisa mengisi form Penyumbangan dan mengisi jadwal janjian dengan pengurus KESMA. Jika terdapat masalah dalam hal pengisian data. Harap hubungi KESMA HMTC.
-		</div>
+<br><br>
+<div class="container" style="background-color: #FAE3E9;">
+  <!-- Trigger the modal with a button -->
+  <div style="width:100%; display:inline-table; float:left;">
+  <div style="width:70%; display: inline-table; float:left;">
+		<button  style="background: url('https://www.bookabuku.com/file/frontend/images/how-thumbnail-lend.jpg') no-repeat; width:100%; height:450px; background-position: center; background-size: cover; font-size: 30px; " class="btn btn-info btn-lg" data-toggle="modal" data-target="#myModal3" color="black">PENYUMBANGAN
+		</button>
 	</div>
-	<div id="gambar">
-		<img src="img/jpgpng/nyumbangicon.png">
+	<div style="width:30%; float:left; padding:3%;">
+	<h3>Mari pelajari cara meminjamkan buku milik Anda sebagai Lender. Untuk menjadi Lender, Anda harus mempunyai akun dan login terlebih dahulu. Daftar sekarang!</h3>
 	</div>
+  </div>
+	
+  <!-- Modal -->
+  <div class="modal fade" id="myModal3" role="dialog">
+    <div class="modal-dialog" style="border-radius:5%;">
+      <!-- Modal content-->
+      <div class="modal-content">
+        <div class="modal-header" style="background-color: lightblue;">
+		  <button type="button" class="close" data-dismiss="modal" color="red">&times;</button>
+		  <img src="img/svg/logo.svg" width="20%;" alt="booKesma">
+		  <hr>
+          <h1 class="modal-title" style="font-family:mp ;padding: 1%; text-align:center;">PENYUMBANGAN</h1>
+        </div>
+        <div class="modal-body" style="font-family:as; font-size:20px; padding: 5%;">
+		<p>Untuk Penyumbangan kalian bisa login terlebih dahulu. Setelah itu, kalian bisa mengisi form Penyumbangan dan mengisi jadwal janjian dengan pengurus KESMA. Jika terdapat masalah dalam hal pengisian data. Harap hubungi KESMA HMTC.</p>
+        </div>
+        <div class="modal-footer" style="background-color: lightblue;">
+          <button type="button" style="color:white;" class="btn btn-danger" data-dismiss="modal">Close</button>
+        </div>
+      </div> 
+    </div>
+  </div>
 </div>
-<div id="reservasi">
-	<div id="gambar">
-		<img src="img/jpgpng/borrowicon.png">
-	</div>
-	<div id="isi">
-		<div id="judul">
-			<h1>PENGEMBALIAN</h1>
-		</div>
-		<div id="tulisan">
-			Untuk Peminjaman kalian bisa mengisi form untuk login terlebih dahulu. Setelah itu, kalian bisa memilih buku sesuai keinginan. Silahkan ambil buku sesuai jadwal janjian dengan pengurus KESMA. Jika terdapat masalah dalam hal pengisian data. Harap hubungi KESMA HMTC.
-		</div>
-	</div>
-</div>
-<div id="reservasi1">
-	<div id="isi">
-		<div id="judul">
-			<h1>PENYUMBANGAN</h1>
-		</div>
-		<div id="tulisan">
-			Untuk Penyumbangan kalian bisa login terlebih dahulu. Setelah itu, kalian bisa mengisi form Penyumbangan dan mengisi jadwal janjian dengan pengurus KESMA. Jika terdapat masalah dalam hal pengisian data. Harap hubungi KESMA HMTC.
-		</div>
-	</div>
-	<div id="gambar">
-		<img src="img/jpgpng/hubungi.png" style="width: 100%;">
-	</div>
+<br><br><br>
+ <div class="container-fluid" style="background-color:#BFDAD5; padding-left:15%;">
+  <div class="row">
+    <div class="col-sm-2">
+    </div>
+    <div class="col-sm-8" style="padding-right:10%; text-align: center;">
+    <h1 style="font-family: mp; font-size:30px;"><b>-OUR MEDIA SOCIAL-</b></h1>
+    <img src="img/jpgpng/icon-facebook.png" style="width: 5%;">
+    <img src="img/jpgpng/icon-mail.png" style="width: 5%;">
+    <img src="img/jpgpng/icon-twitter.png" style="width: 5%;">
+    <br>
+    <h3>Kategori Buku</h3>
+    <h3>Bagaimana?</h3>
+    </div>
+    <div class="col-sm-2" style="">
+    </div>
+  </div>
 </div>
 <!-- adding jquery -->
 <script src="js/jquery-3.3.1.js"></script>
