--- a/app/views/index/show.phtml
+++ b/app/views/index/show.phtml
@@ -138,7 +138,7 @@ Membawaku terbang ke taman-taman pengetahuan paling menawan, melintasi waktu dan
   </div>
 </div>
 <br><br><br>
- <div class="container" style="background-color:#BFDAD5;padding: 5%; padding-left:15%; border-radius:10%;">
+<div class="container-fluid" style="background-color:#BFDAD5; padding-left:15%;">
   <div class="row">
     <div class="col-sm-2">
     </div>
