--- a/app/views/loggedin/cat.phtml
+++ b/app/views/loggedin/cat.phtml
@@ -30,40 +30,54 @@
         </a>
 </div>
     <br><br><br><br>
-<div class="container-fluid" style="background-color: #463af3; padding:1%;">
-    <h2 style="font-family: mp; font-size:40px; text-align:center; color:white;"><b>-KATEGORI BUKU-</b></h2>
+<div class="container-fluid" style="background-color: ; padding:1%;">
+    <h2 style="font-family: tt; font-size:45px; text-align:center; color:black;"><b>-KATEGORI BUKU-</b></h2>
 </div>
-<div class="container-fluid" style="background-color: white;padding: 30px;">
+<div class="container-fluid" style="background-color: white;padding: 30px; margin-left:10%;">
   <div class="row">
-    <div class="col-sm-3" style="background-color: #FBD4C5; padding: 2%;">
+    <div class="col-sm-3" style="background-image: url('img/svg/bg_layer1.svg'); padding: 2%; border-radius:5%; margin:2%;" >
         <img src="img/svg/semester1.svg" style="width: 100%;">
         <br><br>
-        <button style="margin-left:0%;" type="button" class="btn btn-info btn-md">Semester 1</button>
+        <button style="margin-left:30%;" type="button" class="btn btn-info btn-md">Semester 1</button>
     </div>
-    <div class="col-sm-3" style="background-color: #BFDAD5; padding: 2%;">
+    <div class="col-sm-3" style="background-image: url('img/svg/bg_layer2.svg'); padding: 2%; border-radius:5%; margin:2%;">
         <img src="img/svg/semester2.svg" style="width: 100%;">
+        <br><br>
+        <button style="margin-left:30%;" type="button" class="btn btn-info btn-md">Semester 2</button>
     </div>
-    <div class="col-sm-3" style="background-color: #FBD4C5; padding: 2%;">
+    <div class="col-sm-3" style="background-image:url('img/svg/bg_layer3.svg'); padding: 2%; border-radius:5%; margin:2%;">
         <img src="img/svg/semester3.svg" style="width: 100%;">
+        <br><br>
+        <button style="margin-left:30%;" type="button" class="btn btn-info btn-md">Semester 3</button>
     </div>
-    <div class="col-sm-3" style="background-color: #BFDAD5; padding: 2%;">
+    <div class="col-sm-3" style="background-image:url('img/svg/bg_layer3.svg'); padding: 2%; border-radius:5%; margin:2%;">
         <img src="img/svg/semester4.svg" style="width: 100%;">
+        <br><br>
+        <button style="margin-left:30%;" type="button" class="btn btn-info btn-md">Semester 4</button>
+    </div>
+    <div class="col-sm-3" style="background-image:url('img/svg/bg_layer1.svg'); padding: 2%; border-radius:5%; margin:2%;">
+        <img src="img/svg/semester5.svg" style="width: 100%;">
+        <br><br>
+        <button style="margin-left:30%;" type="button" class="btn btn-info btn-md">Semester 5</button>
+    </div>
+    <div class="col-sm-3" style="background-image:url('img/svg/bg_layer2.svg'); padding: 2%; border-radius:5%; margin:2%;">
+        <img src="img/svg/semester6.svg" style="width: 100%;">
+        <br><br>
+        <button style="margin-left:30%;" type="button" class="btn btn-info btn-md">Semester 6</button>
     </div>
   </div>
 </div>
-<div class="container-fluid" style="background-color: white;padding: 30px;">
+<div class="container-fluid" style="background-color: white;padding: 30px; margin-left:10%;">
   <div class="row">
-    <div class="col-sm-3" style="background-color: #BFDAD5; padding: 2%;">
-        <img src="img/svg/semester5.svg" style="width: 100%;">
-    </div>
-    <div class="col-sm-3" style="background-color:#FBD4C5 ; padding: 2%;">
-        <img src="img/svg/semester6.svg" style="width: 100%;">
-    </div>
-    <div class="col-sm-3" style="background-color:#BFDAD5 ; padding: 2%;">
+    <div class="col-sm-3" style="background-image:url('img/svg/bg_layer2.svg'); padding: 2%; border-radius:5%; margin:2%;">
         <img src="img/svg/semester7.svg" style="width: 100%;">
+        <br><br>
+        <button style="margin-left:30%;" type="button" class="btn btn-info btn-md">Semester 7</button>
     </div>
-    <div class="col-sm-3" style="background-color: #FBD4C5; padding: 2%;">
+    <div class="col-sm-3" style="background-image:url('img/svg/bg_layer3.svg'); padding: 2%; border-radius:5%; margin:2%;">
         <img src="img/svg/semester8.svg" style="width: 100%;">
+        <br><br>
+        <button style="margin-left:30%;" type="button" class="btn btn-info btn-md">Semester 8</button>
     </div>
   </div>
 </div>
