--- a/app/views/submit/creater.phtml
+++ b/app/views/submit/creater.phtml
@@ -51,10 +51,12 @@
 		</div>
 		<div class="form-group">
 			<label>Password</label>
+			<p title="Sorry, but we don't do alot in security">Gunakan kombinasi huruf kecil, kapital dan angka minimal 8 karakter!</p>
 			<?php echo $form->render('rpassword'); ?>
 		</div>
 		<div class="form-group">
 			<label>Confirm Password</label>
+			<p title="Please, don't fill it with 'Yes, it's my password' -_-">Masukkan kembali password yang sama!</p>
 			<?php echo $form->render('rcpassword'); ?>
 		</div>
 		<div class="form-group">
