--- a/app/views/loggedout/charity.phtml
+++ b/app/views/loggedout/charity.phtml
@@ -38,42 +38,26 @@
 		<div class="wrap-contact100">
 			<div class="contact100-form-title" style="background-image: url(img/bg-01.jpg);">
 				<span class="contact100-form-title-1">
-					FORM PENYUMBANG
+					FORM BUKU PENYUMBANG
 				</span>
 			</div>
 
 			<form class="contact100-form validate-form">
-				<div class="wrap-input100 validate-input" data-validate="Name is required">
-					<span class="label-input100">ID:</span>
-					<input class="input100" type="text" name="id" placeholder="Masukkan ID">
+				<div class="wrap-input100 validate-input" data-validate="Judul Buku is required">
+					<span class="label-input100">Judul Buku:</span>
+					<input class="input100" type="text" name="judul" placeholder="Masukkan Judul Buku">
 					<span class="focus-input100"></span>
 				</div>
 
-				<div class="wrap-input100 validate-input" data-validate="Name is required">
-					<span class="label-input100">Nama:</span>
-					<input class="input100" type="text" name="name" placeholder="Masukkan Nama">
+				<div class="wrap-input100 validate-input" data-validate="Tebal Halaman is required">
+					<span class="label-input100">Tebal Halaman:</span>
+					<input class="input100" type="text" name="halaman" placeholder="Masukkan Tebal Halaman">
 					<span class="focus-input100"></span>
 				</div>
 
-				<div class="wrap-input100 validate-input" data-validate = "Valid email is required: ex@abc.xyz">
-					<span class="label-input100">Email:</span>
-					<input class="input100" type="text" name="email" placeholder="Masukkan Email">
-					<span class="focus-input100"></span>
-				</div>
-
-				<div class="wrap-input100 validate-input" data-validate="Phone is required">
-					<span class="label-input100">No HP:</span>
-					<input class="input100" type="text" name="phone" placeholder="Masukkan Nomer HP">
-					<span class="focus-input100"></span>
-				</div>
-				<div class="wrap-input100 validate-input" data-validate="Phone is required">
-					<span class="label-input100">Departemen:</span>
-					<input class="input100" type="text" name="departemen" placeholder="Masukkan Departemen">
-					<span class="focus-input100"></span>
-				</div>
-				<div class="wrap-input100 validate-input" data-validate="Phone is required">
-					<span class="label-input100">Universitas:</span>
-					<input class="input100" type="text" name="universitas" placeholder="Masukkan Universitas">
+				<div class="wrap-input100 validate-input" data-validate = "Deskripsi Buku is required">
+					<span class="label-input100">Deskripsi Buku:</span>
+					<textarea class="input100" name="desk" placeholder="Deskripsi Buku ...."></textarea>
 					<span class="focus-input100"></span>
 				</div>
 
