Update Hal Login

--- a/app/views/submit/creater.phtml
+++ b/app/views/submit/creater.phtml
@@ -8,7 +8,7 @@
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Registration &middot; booKesma</title>
+    <title>Registrasi &middot; booKesma</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- Icon -->
 	<link rel="icon" type="icon/image" href="img/jpgpng/favicon.png">
@@ -63,8 +63,8 @@
 			<?php echo $form->render('rsubmit'); ?>
 		</div>
 		<div>
-		<p>
-			Sudah menjadi anggota? <a href="<?=$this->url->getBaseUri().'login'?>">Masuk</a>
+		<p id="re">
+			Sudah menjadi anggota? <a href="<?=$this->url->getBaseUri().'login'?>">Masuk aja!</a>
 		</p>
 		</form>
 	</div>
