--- a/app/views/submit/createl.phtml
+++ b/app/views/submit/createl.phtml
@@ -1,34 +1,63 @@
+<!-- generate dynamic base url -->
+<?php
+    use Phalcon\Mvc\Url;
+    $url = new Url();
+?>
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Member Login!</title>
-  <link rel="stylesheet" type="text/css" href="css/styledaftar.css">
+		<meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title>Masuk &middot; booKesma</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- Icon -->
+		<link rel="icon" type="icon/image" href="img/jpgpng/favicon.png">
+    <!-- adding bootstrap css-->
+    <link rel="stylesheet" type="text/css" media="screen" href="css/bootstrap.css" />
+    <!-- adding bootstrap theme css-->
+    <link rel="stylesheet" type="text/css" media="screen" href="css/bootstrap-theme.css" />
+    <!-- external page css -->
+		<link rel="stylesheet" type="text/css" href="css/show.css">
+  	<link rel="stylesheet" type="text/css" href="css/masuk.css">
 </head>
 <body>
-  <div class="header">
-  	<h2>Member Login</h2>
-  </div>
-	 
-  <form method="post" action="login.php">
-
-  	<div class="input-group">
-  		<label>Username</label>
-  		<input type="text" name="username" value="" >
-  	</div>
-  	<div class="input-group">
-  		<label>Password</label>
-  		<input type="password" name="password" value="" >
-  	</div>
-    <div class="input-group">
-      <label for="remember" >Remember Me? <input type="checkbox" name="remember" value="1" style="width: 40%;"></label>
-      
+<div class="topnav" id="top-nav" style="z-index: 99;">
+        <a class="home" href="<?=$this->url->getBaseUri()?>">
+            <img src="img/svg/logo.svg" alt="booKesma">
+        </a>
+        <a href="<?=$this->url->getBaseUri().'login'?>">Masuk</a>
+        <a href="<?=$this->url->getBaseUri().'register'?>">Daftar</a>
+        <a href="<?=$this->url->getBaseuri().'koleksi'?>">Koleksi</a>
+        <a href="<?=$this->url->getBaseuri().'bagaimana'?>">Bagaimana</a>
+        <a href="<?=$this->url->getBaseuri().'sumbang'?>">Sumbang</a>
+        <a href="javascript:void(0);" class="icon" onclick="navbar()">
+            <img src="img/svg/hamburger-menu.svg" alt="menu">
+        </a>
     </div>
-  	<div class="input-group">
-  		<button type="submit" class="btn" name="login_user">Login</button>
-  	</div>
-  	<p>
-  		You are not a member? <a href="register.php">Register</a>
-  	</p>
-  </form>
+	<div class="container">
+		<h2>Masuk</h2>
+		<?php echo $this->tag->form("login");?>
+		<div class="form-group">
+			<label>Email</label>
+			<?php echo $form->render('remail'); ?>
+		</div>
+		<div class="form-group">
+			<label title="Don't use the same password, we don't do alot in security">Password</label>
+			<?php echo $form->render('rpassword'); ?>
+		</div>
+		<div class="form-group">
+			<?php echo $form->render('rsubmit'); ?>
+		</div>
+		<div>
+		<p id="remind">
+			Belum memiliki akun? <a href="<?=$this->url->getBaseUri().'register'?>">Daftar aja!</a>
+		</p>
+		</form>
+	</div>
+<!-- adding bootstrap -->
+<script src="js/bootstrap.js"></script>
+<!-- adding jquery -->
+<script src="js/jquery-3.3.1.js"></script>
+<!-- adding external script -->
 </body>
 </html>
