--- a/app/views/index/show.phtml
+++ b/app/views/index/show.phtml
@@ -18,6 +18,12 @@
     <link rel="stylesheet" type="text/css" media="screen" href="css/bootstrap-theme.css" />
     <!-- external page css -->
     <link rel="stylesheet" type="text/css" media="screen" href="css/show.css" />
+    
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+  <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet" type="text/css">
+  <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet" type="text/css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </head>
 <body style="background-image: url('img/svg/bg_layer1.svg')">
     <div class="topnav" id="top-nav" style="z-index: 99;">
@@ -33,7 +39,39 @@
             <img src="img/svg/hamburger-menu.svg" alt="menu">
         </a>
     </div>
-    <br><br><br><br>
+    <div id="myCarousel" class="carousel slide" data-ride="carousel">
+    <!-- Indicators -->
+    <ol class="carousel-indicators">
+      <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+      <li data-target="#myCarousel" data-slide-to="1"></li>
+      <li data-target="#myCarousel" data-slide-to="2"></li>
+    </ol>
+
+    <!-- Wrapper for slides -->
+    <div class="carousel-inner" role="listbox">
+      <div class="item active">
+        <img src="img/3.jpg" alt="New York" width="100%" height="">     
+      </div>
+
+      <div class="item">
+        <img src="img/1.jpg" alt="Chicago" width="100%" height="">    
+      </div>
+    
+      <div class="item">
+        <img src="img/2.jpg" alt="Los Angeles" width="100%" height="">    
+      </div>
+    </div>
+    <!-- Left and right controls -->
+    <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
+      <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+      <span class="sr-only">Previous</span>
+    </a>
+    <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
+      <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+      <span class="sr-only">Next</span>
+    </a>
+</div>
+<br><br>
 <div class="container" style="background-color: #BFDAD5; padding: 30px; border-radius:10%;">
   <div class="row">
     <div class="col-sm-7" style="font-family:mp; font-size: 20px;">
