update halaman history

--- a/app/views/index/show.phtml
+++ b/app/views/index/show.phtml
@@ -30,11 +30,11 @@
         <a class="home" href="<?=$this->url->getBaseUri()?>">
             <img src="img/svg/logo.svg" alt="booKesma">
         </a>
-        <a href="<?=$this->url->getBaseUri().'login'?>">Masuk</a>
-        <a href="<?=$this->url->getBaseUri().'register'?>">Daftar</a>
-        <a href="<?=$this->url->getBaseuri().'koleksi'?>">Koleksi</a>
-        <a href="<?=$this->url->getBaseuri().'bagaimana'?>">Bagaimana</a>
-        <a href="<?=$this->url->getBaseuri().'sumbang'?>">Sumbang</a>
+        <a style="text-decoration: none;" href="<?=$this->url->getBaseUri().'login'?>">Masuk</a>
+        <a style="text-decoration: none;" href="<?=$this->url->getBaseUri().'register'?>">Daftar</a>
+        <a style="text-decoration: none;" href="<?=$this->url->getBaseuri().'koleksi'?>">Koleksi</a>
+        <a style="text-decoration: none;" href="<?=$this->url->getBaseuri().'bagaimana'?>">Bagaimana</a>
+        <a style="text-decoration: none;" href="<?=$this->url->getBaseuri().'sumbang'?>">Sumbang</a>
         <a href="javascript:void(0);" class="icon" onclick="navbar()">
             <img src="img/svg/hamburger-menu.svg" alt="menu">
         </a>
