--- a/app/views/loggedin/history.phtml
+++ b/app/views/loggedin/history.phtml
@@ -13,6 +13,9 @@
     <link rel="stylesheet" type="text/css" media="screen" href="css/bootstrap-theme.css" />
     <!-- external page css -->
     <link rel="stylesheet" type="text/css" media="screen" href="css/show.css" />
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </head>
 <body style="background-image: url('img/svg/bg_layer1.svg')">
     <div class="topnav" id="top-nav" style="z-index: 99;">
@@ -29,5 +32,30 @@
         </a>
     </div>
     <br><br><br><br>
+
+    <div style="width:80%; height:500px; margin-left:10%; background-color: white; border: 3px solid lightblue; font-family:mp;">
+        <h1 style="text-align: center;">HISTORY</h1>
+        <hr>
+        <div style="padding-left:5%; padding-right:5%;">
+        <table class="table table-striped" style="padding-left:5%;">
+    <thead>
+      <tr>
+        <th>Judul Buku</th>
+        <th>Tanggal Peminjaman</th>
+        <th>Tanggal Pengembalian</th>
+        <th>Pengembalian</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td>Microsoft Excel</td>
+        <td>14 April 2018</td>
+        <td>14 Desember 2018</td>
+        <td><a href="#"><span class="glyphicon glyphicon-ok"></span></a></td>
+      </tr>
+    </tbody>
+  </table>
+        </div>
+    </div>
 </body>
 </html>
