--- a/public/users/koleksiku/css/style.css
+++ b/public/users/koleksiku/css/style.css
@@ -1,26 +1,84 @@
-hr{
-    width: 250px;
-    border-top: 20px solid #999;
+/* color pallete */
+:root{
+    --oren: #dbb13b;
+    --birmud: #2dc7ff;
+    --bir: #183f9c;
+    --birtu: #2d325a;
+    --birdong: #0a0e29;
 }
-
-section{
-    min-height: 600px;
+/* font template */
+@font-face{
+	font-family: bi;
+	src:url("../font/BahasaIndonesia.ttf");
 }
-
-.thumbnail{
-    width: 50%;
+@font-face{
+	font-family: as;
+	src:url("../font/Assistant.ttf");
 }
-
-.jumbotron{
-    background-image: url('../img/jumbotron.jpg');
-    background-attachment: fixed;
-    background-size: cover;
-    background-position: 0 50px;
-    box-shadow: 1px, 1px, 10px rgba(0, 0, 0, 5);
+@font-face{
+	font-family: mp;
+	src:url("../font/MavenPro.ttf");
 }
-
-.jumbotron h1, .jumbotron p{
-    color: grey;
-    text-shadow: 1px, 1px, 10px rgba(0, 0, 0, 5);
+html, body{
+    height: 100%;
 }
-
+/* nav bar */
+.topnav{
+    overflow: hidden;
+    background-color: #f3f3f3;
+    position: fixed;
+    width: 100%;
+    height: auto;
+}
+.topnav a{
+    float: right;
+    display: block;
+    color: var(--birdong);
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+    font-size: 1.3vw;
+    font-family: as;
+}
+.topnav a:hover:not(.home){
+    background-color: var(--oren);
+}
+.topnav .home{
+    float: left;
+}
+.topnav img{
+    height: 1.5em;
+    width: auto;
+}
+.topnav .icon{
+    display: none;
+}
+@media screen and (max-width: 600px){
+    .topnav a:not(:first-child){display: none;}
+    .topnav a.icon{
+        float: right;
+        display: block;
+    }
+}
+@media screen and (max-width: 600px){
+    .topnav.responsive{
+        position: fixed;
+        /* z-index: 99; */
+    }
+    .topnav.responsive .icon{
+        position: absolute;
+        right: 0;
+        top: 0;
+        height:1.5em;
+        width:auto;
+    }
+    .topnav.responsive a{
+        float: none;
+        display: block;
+        text-align: right;
+    }
+    .topnav img{
+        float: left;
+	}
+}
+/* header */
