update form penyumbang

--- a/app/views/loggedout/identity.phtml
+++ b/app/views/loggedout/identity.phtml
@@ -43,9 +43,9 @@
 			</div>
 
 			<form class="contact100-form validate-form">
-				<div class="wrap-input100 validate-input" data-validate="ID is required">
-					<span class="label-input100">ID:</span>
-					<input class="input100" type="text" name="id" placeholder="Masukkan ID">
+				<div class="wrap-input100 validate-input" data-validate="NRP is required">
+					<span class="label-input100">NRP:</span>
+					<input class="input100" type="text" name="nrp" placeholder="Masukkan NRP">
 					<span class="focus-input100"></span>
 				</div>
 
