--- a/app/views/submit/createl.phtml
+++ b/app/views/submit/createl.phtml
@@ -46,7 +46,7 @@
 			<?php echo $form->render('rpassword'); ?>
 		</div>
 		<div class="form-group">
-			<?php echo $form->render('rsubmit'); ?>
+			<?php echo $form->render('rsubmit',['value'=>'Masuk']); ?>
 		</div>
 		<div>
 		<p id="remind">
