--- a/app/views/submit/creater.phtml
+++ b/app/views/submit/creater.phtml
@@ -55,7 +55,7 @@
 			<?php echo $form->render('rpassword'); ?>
 		</div>
 		<div class="form-group">
-			<label>Confirm Password</label>
+			<label>Konfirmasi Password</label>
 			<p title="Please, don't fill it with 'Yes, it's my password' -_-">Masukkan kembali password yang sama!</p>
 			<?php echo $form->render('rcpassword'); ?>
 		</div>
