--- a/app/views/loggedin/profile.phtml
+++ b/app/views/loggedin/profile.phtml
@@ -8,7 +8,7 @@
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>booKesma &middot; Pinjam-Sumbang Buku Akademik Informatika ITS</title>
+    <title>Profil &middot; booKesma</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- Icon -->
 	<link rel="icon" type="icon/image" href="img/jpgpng/favicon.png">
@@ -18,31 +18,42 @@
     <link rel="stylesheet" type="text/css" media="screen" href="css/bootstrap-theme.css" />
     <!-- external page css -->
     <link rel="stylesheet" type="text/css" media="screen" href="css/show.css" />
+    <link rel="stylesheet" type="text/css" media="screen" href="css/profile.css" />
 </head>
 <body style="background-image: url('img/svg/bg_layer1.svg')">
     <div class="topnav" id="top-nav" style="z-index: 99;">
         <a class="home" href="<?=$this->url->getBaseUri()?>">
             <img src="img/svg/logo.svg" alt="booKesma">
         </a>
-        <a href="<?=$this->url->getBaseUri().'login'?>">Masuk</a>
-        <a href="<?=$this->url->getBaseUri().'register'?>">Daftar</a>
-        <a href="<?=$this->url->getBaseuri().'koleksi'?>">Koleksi</a>
-        <a href="<?=$this->url->getBaseuri().'bagaimana'?>">Bagaimana</a>
+        <a href="<?=$this->url->getBaseUri().'user'?>"><?=$this->session->get('auth')['s_name'] ?></a>
+        <a href="<?=$this->url->getBaseuri().'users/koleksi'?>">Koleksi</a>
+        <a href="<?=$this->url->getBaseuri().'users/bagaimana'?>">Bagaimana</a>
         <a href="<?=$this->url->getBaseuri().'sumbang'?>">Sumbang</a>
         <a href="javascript:void(0);" class="icon" onclick="navbar()">
             <img src="img/svg/hamburger-menu.svg" alt="menu">
         </a>
     </div>
     <br><br><br><br><br>
-    <div style="width:80%; height: 400px; background-color: white; margin-left: 10%;margin-right:10%; border: 3px solid lightblue; border-radius:5%;">
-        <div style="text-align: center;"><h3>DATA DIRI ANDA</h3>
-        <hr>
+    <div style="width:80%; height: 25vw; background-color: white; margin-left: 10%;margin-right:10%; border: 3px solid lightblue; border-radius:25%;">
+        <div style="text-align: center;"><h3>Data Diri Anda</h3>
+            <div class="form-group">
+                <label>Username</label>
+                <p><?=$nama?></p>
+            </div>
+            <div class="form-group">
+                <label>NRP</label>
+                <p><?=$nrp?></p>
+            </div>
+            <div class="form-group">
+                <label>Email</label>
+                <p><?=$email?></p>
+            </div>
         </div>
     </div>
     <br>
     <div style="margin-left: 45%;">
-    <button class="btn btn-info btn-lg">Edit</button>
-    <button class="btn btn-info btn-lg">Kembali</button>
+        <button class="btn btn-info btn-md">Edit</button>
+        <button class="btn btn-secondary btn-md">Kembali</button>
     </div>
 <!-- adding bootstrap -->
 <script src="js/bootstrap.js"></script>
