--- a/app/views/loggedin/time.phtml
+++ b/app/views/loggedin/time.phtml
@@ -62,7 +62,7 @@
 </div>
 <!-- akhir jumbotron -->
 <!-- buku -->
-<section class="daftar" id="daftar" style="background-image: url('img/svg/bg_layer3.svg')">
+<section class="daftar" id="daftar" style="margin-left:5%;">
     <div class="container">
         <div class="row">
             <div class="col-sm-4">
