--- a/app/views/loggedin/edit.phtml
+++ b/app/views/loggedin/edit.phtml
@@ -64,7 +64,7 @@
 		</div>
 		<div class="form-group">
 			<?php echo $form->render('rsubmit',["value"=>"Simpan Perubahan","class"=>"btn btn-success"]); ?>
-            <button class="btn btn-secondary btn-md">Kembali</button>
+            <a href="<?=$this->url->getBaseUri().'users/profile'?>" class="btn btn-default btn-md">Kembali</a>
 		</div>
 		</form>
 	</div>
