update routing di button

--- a/app/views/loggedin/cat.phtml
+++ b/app/views/loggedin/cat.phtml
@@ -36,7 +36,7 @@
 </div>
     <br><br><br><br>
 <div class="container-fluid" style="background-color: ; padding:1%;">
-    <h2 style="font-family: tt; font-size:45px; text-align:center; color:black;"><b>-KATEGORI BUKU-</b></h2>
+    <h2 style="font-family: mp; font-size:45px; text-align:center; color:black;"><b>-KATEGORI BUKU-</b></h2>
 </div>
 <div class="container-fluid" style="background-color: white;padding: 30px; margin-left:10%;">
   <div class="row">
