update routing di button2

--- a/app/views/loggedout/charity.phtml
+++ b/app/views/loggedout/charity.phtml
@@ -61,6 +61,12 @@
 					<span class="focus-input100"></span>
 				</div>
 
+				<div class="wrap-input100 validate-input" data-validate="Gambar Buku is required">
+					<span class="label-input100">Gambar Buku:</span>
+					<input class="input100" type="file" name="halaman">
+					<span class="focus-input100"></span>
+				</div>
+
 				<div class="container-contact100-form-btn">
 					<button class="contact100-form-btn">
 						<span>
