--- a/app/views/loggedout/identity.phtml
+++ b/app/views/loggedout/identity.phtml
@@ -78,12 +78,12 @@
 				</div>
 
 				<div class="container-contact100-form-btn">
-					<button class="contact100-form-btn">
+					<a href="<?=$this->url->getBaseUri().'sumbang-buku'?>" class="contact100-form-btn">
 						<span>
 							Submit
 							<i class="fa fa-long-arrow-right m-l-7" aria-hidden="true"></i>
 						</span>
-					</button>
+					</a>
 				</div>
 			</form>
 		</div>
