--- a/app/views/index/show.phtml
+++ b/app/views/index/show.phtml
@@ -1,8 +1,3 @@
-<!-- generate dynamic base url -->
-<?php
-    use Phalcon\Mvc\Url;
-    $url = new Url();
-?>
 <!DOCTYPE html>
 <html>
 <head>
@@ -18,12 +13,11 @@
     <link rel="stylesheet" type="text/css" media="screen" href="css/bootstrap-theme.css" />
     <!-- external page css -->
     <link rel="stylesheet" type="text/css" media="screen" href="css/show.css" />
-    
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-  <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet" type="text/css">
-  <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet" type="text/css">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <!-- external link   -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet" type="text/css">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet" type="text/css">
+
 </head>
 <body style="background-image: url('img/svg/bg_layer1.svg')">
     <div class="topnav" id="top-nav" style="z-index: 99;">
@@ -193,6 +187,9 @@ Membawaku terbang ke taman-taman pengetahuan paling menawan, melintasi waktu dan
     </div>
   </div>
 </div>
+<!-- external link -->
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 <!-- adding bootstrap -->
 <script src="js/bootstrap.js"></script>
 <!-- adding jquery -->
