--- a/app/views/loggedout/cat.phtml
+++ b/app/views/loggedout/cat.phtml
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>KATEGORI BUKU</title>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>booKesma &middot; Pinjam-Sumbang Buku Akademik Informatika ITS</title>
+    <title>Koleksi &middot; booKesma</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- Icon -->
 	<link rel="icon" type="icon/image" href="img/jpgpng/favicon.png">
