--- a/app/views/loggedout/charity.phtml
+++ b/app/views/loggedout/charity.phtml
@@ -3,15 +3,15 @@
 <head>
 	<meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>booKesma &middot; Pinjam-Sumbang Buku Akademik Informatika ITS</title>
+    <title>Sumbang &middot; booKesma</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- Icon -->
 	<link rel="icon" type="icon/image" href="img/jpgpng/favicon.png">
 	<link rel="stylesheet" type="text/css" href="vendor/bootstrap/css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="font/font-awesome-4.7.0/css/font-awesome.min.css">
 	<link rel="stylesheet" type="text/css" href="font/Linearicons-Free-v1.0.0/icon-font.min.css">
-	    <!-- adding bootstrap css-->
-		<link rel="stylesheet" type="text/css" media="screen" href="css/bootstrap.css" />
+	<!-- adding bootstrap css-->
+	<link rel="stylesheet" type="text/css" media="screen" href="css/bootstrap.css" />
     <!-- adding bootstrap theme css-->
     <link rel="stylesheet" type="text/css" media="screen" href="css/bootstrap-theme.css" />
     <!-- external page css -->
@@ -28,7 +28,7 @@
         <a href="<?=$this->url->getBaseUri().'register'?>">Daftar</a>
         <a href="<?=$this->url->getBaseuri().'koleksi'?>">Koleksi</a>
         <a href="<?=$this->url->getBaseuri().'bagaimana'?>">Bagaimana</a>
-        <a href="<?=$this->url->getBaseuri().'sumbang'?>">Sumbang</a>
+        <a class="active" href="<?=$this->url->getBaseuri().'sumbang'?>">Sumbang</a>
         <a href="javascript:void(0);" class="icon" onclick="navbar()">
             <img src="img/svg/hamburger-menu.svg" alt="menu">
         </a>
