--- a/app/views/loggedout/how.phtml
+++ b/app/views/loggedout/how.phtml
@@ -1,8 +1,3 @@
-<!-- generate dynamic base url -->
-<?php
-    use Phalcon\Mvc\Url;
-    $url = new Url();
-?>
 <!DOCTYPE html>
 <html>
 <head>
@@ -27,7 +22,7 @@
         <a href="<?=$this->url->getBaseUri().'login'?>">Masuk</a>
         <a href="<?=$this->url->getBaseUri().'register'?>">Daftar</a>
         <a href="<?=$this->url->getBaseuri().'koleksi'?>">Koleksi</a>
-        <a class="active" href="<?=$this->url->getBaseuri().'bagaimana'?>">Bagaimana</a>
+        <a href="<?=$this->url->getBaseuri().'bagaimana'?>">Bagaimana</a>
         <a href="<?=$this->url->getBaseuri().'sumbang'?>">Sumbang</a>
         <a href="javascript:void(0);" class="icon" onclick="navbar()">
             <img src="img/svg/hamburger-menu.svg" alt="menu">
