Update logout gambar

--- a/app/views/submit/destroy.phtml
+++ b/app/views/submit/destroy.phtml
@@ -18,7 +18,7 @@
 <body>
     <div class="container">
         <div class="content">
-            <img style="width:300px; height:300px;" src="img/svg/logo_icon.svg" alt="logout">
+            <img style="width:25vw; height:25vw;" src="img/svg/logo_icon.svg" alt="logout">
             <div class="title">
                 Terima kasih telah menggunakan layanan kami.
                 <a style="color: #0a0e29" href="<?=$this->url->getBaseUri()?>">\nMampir-mampir lagi ya!</a>
